--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light" />
     <title>Закрывающий тег</title>
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
@@ -14,11 +16,13 @@
   </head>
   <body class="page">
     <header class="header">
+      <h1 class="header__title">&lt;/html&gt;</h1>
+      <h2 class="header__subtitle">закрывающий тег</h2>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать --->
         <ul class="theme-menu__list">
           <li class="theme-menu__item">
-            <button type="button" data-theme="dark" class="theme-menu__button">
+            <button type="button" data-theme="dark" class="button theme-menu__button">
               Темно
             </button>
           </li>
@@ -27,20 +31,61 @@
               type="button"
               data-theme="auto"
               disabled
-              class="theme-menu__button"
+              class="button theme-menu__button"
             >
               Авто
             </button>
           </li>
           <li class="theme-menu__item">
-            <button type="button" data-theme="light" class="theme-menu__button">
+            <button type="button" data-theme="light" class="button theme-menu__button">
               Светло
             </button>
           </li>
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <ul class="card__list">
+        <li class="card__list-item">
+          <article class="card">
+            <h2 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
+            <img
+              class="card__image"
+              src="./images/image.png"
+            />
+            <div class="card__text">
+              <p>
+                Это было самое начало пути.
+                На этом этапе важно было проникнуться основами и настроиться на учёбу.
+                И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
+              <p>
+                Место для ваших воспоминаний о начале обучения.</p>
+              <button class="button card__button">Like</button>
+            </div>
+          </article>
+        </li>
+        <li class="card__list-item">
+          <article class="card">
+            <h2 class="card__title">1 спринт: Я — чистый лист</h2>
+            <img
+              class="card__image"
+              src="./images/image.png"
+            />
+            <div class="card__text">
+              <p>
+                На первых этапах мы работали со страхами и сомнениями,
+                которые часто испытывают новички. Один из них — страх перед чистым листом.
+                Это, конечно же, намного сложнее, чем боязнь куска бумаги.
+                Часто за этим ощущением скрываются более глубокие вопросы: с чего начать?
+                а вдруг будет слишком сложно? что, если я не справлюсь?</p>
+              <p>
+                Место для ваших воспоминаний о начале первого спринта.</p>
+              <button class="button card__button">Like</button>
+            </div>
+          </article>
+        </li>
+      </ul>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
