--- a/index.html
+++ b/index.html
@@ -48,24 +48,6 @@
       <ul class="card__list">
         <li class="card__list-item">
           <article class="card">
-            <h2 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
-            <img
-              class="card__image"
-              src="./images/image.png"
-            />
-            <div class="card__text">
-              <p>
-                Это было самое начало пути.
-                На этом этапе важно было проникнуться основами и настроиться на учёбу.
-                И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
-              <p>
-                Место для ваших воспоминаний о начале обучения.</p>
-              <button class="button card__button">Like</button>
-            </div>
-          </article>
-        </li>
-        <li class="card__list-item">
-          <article class="card">
             <h2 class="card__title">1 спринт: Я — чистый лист</h2>
             <img
               class="card__image"
@@ -80,12 +62,34 @@
                 а вдруг будет слишком сложно? что, если я не справлюсь?</p>
               <p>
                 Место для ваших воспоминаний о начале первого спринта.</p>
-              <button class="button card__button">Like</button>
+              <ul class="card__button-list">
+                <button class="button card__icon-button">
+                  <svg xmlns="http://www.w3.org/2000/svg"
+                  width="27"
+                  height="24"
+                  fill="currentColor">
+                  <path fill="currentColor" d="M6 0H3v3h3V0ZM9 0H6v3h3V0ZM3 3H0v3h3V3ZM3 6H0v3h3V6ZM3 9H0v3h3V9ZM12 0H9v3h3V0ZM6 12H3v3h3v-3ZM9 15H6v3h3v-3ZM12 18H9v3h3v-3ZM21 0h3v3h-3V0ZM18 0h3v3h-3V0ZM24 3h3v3h-3V3ZM24 6h3v3h-3V6ZM24 9h3v3h-3V9ZM15 0h3v3h-3V0ZM21 12h3v3h-3v-3ZM18 15h3v3h-3v-3ZM15 18h3v3h-3v-3ZM15 3h-3v3h3V3ZM15 21h-3v3h3v-3Z"/>
+                  </svg>
+                </button>
+                <button class="button card__like-button">
+                  <span class="button__text">Like</span>
+                </button>
+              </ul>
             </div>
           </article>
         </li>
       </ul>
     </main>
+    <footer class="footer">
+      <button class="button footer_button">
+        <svg class="floppy-icon"
+          viewBox="0 0 39 39">
+          <use href="/images/floppy.svg#floppy">
+          </use>
+        </svg>
+        <span class="button__text">Сохранить на память</span>
+      </button>
+    </footer>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
