--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 class="card__image filter"
                 src="./images/freetrack.jpg"
                 alt="Астронавт в открытом космосе"
-                loading="”lazy”"
+                loading="lazy"
               />
             </div>
             <div class="card__text">
