--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <title>Закрывающий тег</title>
-    <link rel="icon" href="./images/favicon.ico" sizes="any" />
-    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./images/favicon.png" />
+    <link rel="icon" href="./svg/favicon.ico" sizes="any" />
+    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./svg/favicon.svg" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
@@ -19,7 +19,7 @@
   <body class="page">
     <dialog class="dialog" id="dialog-id">
       <svg class="floppy-icon" viewBox="0 0 39 39">
-        <use href="/images/floppy.svg#floppy"></use>
+        <use href="./svg/floppy.svg#floppy"></use>
       </svg>
       <h2 class="button__text dialog__text">
         Вставьте дискету, чтобы продолжить
@@ -638,7 +638,7 @@
         aria-controls="dialog-id"
       >
         <svg class="floppy-icon" viewBox="0 0 39 39">
-          <use href="/images/floppy.svg#floppy"></use>
+          <use href="./svg/floppy.svg#floppy"></use>
         </svg>
         <span class="button__text footer__button_text"
           >Сохранить на память</span
