--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
       <h2 class="button__text dialog__text">
         Вставьте дискету, чтобы продолжить
       </h2>
+
       <button
         class="button dialog__button button__effects"
-        type="button"
+        type="submit"
         onclick="window['dialog-id'].close()"
       >
         <span class="button__text">ок</span>
