--- a/index.html
+++ b/index.html
@@ -18,20 +18,21 @@
   </head>
   <body class="page">
     <dialog class="dialog" id="dialog-id">
-      <svg class="floppy-icon" viewBox="0 0 39 39">
-        <use href="./svg/floppy.svg#floppy"></use>
-      </svg>
-      <h2 class="button__text dialog__text">
-        Вставьте дискету, чтобы продолжить
-      </h2>
-
-      <button
-        class="button dialog__button button__effects"
-        type="submit"
-        onclick="window['dialog-id'].close()"
-      >
-        <span class="button__text">ок</span>
-      </button>
+      <form method="dialog" class="dialog__form">
+        <svg class="floppy-icon" viewBox="0 0 39 39">
+          <use href="./svg/floppy.svg#floppy"></use>
+        </svg>
+        <h2 class="button__text dialog__text">
+          Вставьте дискету, чтобы продолжить
+        </h2>
+        <button
+          class="button dialog__button button__effects"
+          type="submit"
+          onclick="window['dialog-id'].close()"
+        >
+          <span class="button__text">ок</span>
+        </button>
+      </form>
     </dialog>
     <header class="header">
       <h1 class="header__title">&lt;/html&gt;</h1>
