Переделала кнопку в подвале и диалоговое окно v2

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <button
             class="button dialog__button button__effects"
             type="submit"
-            onclick="window['dialog-id'].close()"
+            onclick="window['dialog-id'].close();"
           >
             <span class="button__text">ок</span>
           </button>
